need to add sound effect to submit button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 body {
-    background-image: images("..images/dunder.jpg")
+    background-image: url("../images/office.png");
+    background-repeat: repeat;
+    background-size: 25%;
 }
 
 h1 {
@@ -8,7 +10,11 @@ h1 {
 }
 
 button {
-    margin: auto;
+    background-color: white;
+    color: rgb(4,67,164);
+    padding: 5px 12px;
+    border:none;
+    
 }
 
 #timer {
@@ -17,10 +23,24 @@ button {
 
 #container {
     text-align: center;
-    margin: 0 10% 0 10%;
-    background: lightskyblue;
+    margin: 0 17% 20px 17%;
+    background: rgb(4,67,164);
+    color: white;
+    background-image: url(../images/dunder.jpg), url(../images/dunder.jpg);
+    background-size: 15%, 15%;
+    background-position-x: 15px, -15px;
+    background-position: top left, top right;
+    background-repeat: repeat-y, repeat-y;
 }
 
 #wrapper {
     padding-bottom: 30px;
+}
+
+#finish-button {
+    margin-top: 15px;
+}
+
+h3 {
+    text-shadow: 3px 3px black;
 }
